중간 완성본 변정우

--- a/project_avocado/frontend/index.html
+++ b/project_avocado/frontend/index.html
@@ -771,7 +771,7 @@
                 const baseVoices = [
                     { id: 'default_male', icon: 'fa-solid fa-person', name: '남성' },
                     { id: 'default_female', icon: 'fa-solid fa-person-dress', name: '여성' },
-                    { id: 'default_charactor', icon: 'fa-solid fa-robot', name: '캐릭터' },
+                    { id: 'default_character', icon: 'fa-solid fa-robot', name: '캐릭터' },
                 ];
                 
                 let allVoices = [...baseVoices];
